graphql-schema-parser/src/test/positive/non-null-list-of-non-nulls.graphqls
schema {
    query: Query
}

scalar Url

typeReference Query {
    url : [Url!]!
}