graphql-schema-parser/src/test/negative/override-existing-field.graphqls
schema {
    query: Query
}

type Query {
    field: Int
    field: String
}

scalar Url